--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,32 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Etch-a-Sketch</h1>
+    </div>
+
+    <div class="content">
+        <div id="control-panel">
+            <button id="color">
+                <p>Color</p>
+            </button>
+            <button id="mode">
+                <p>Mode</p>
+            </button>
+            <button id="erase">
+                <p>Erase</p>
+            </button>
+            <button id="reset">
+                <p>Reset</p>
+            </button>
+        </div>
+        <div id="board">
+
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright © 2024 korih</p>
+    </div>
 </body>
 </html>
