beginning of adding color picker

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,13 @@
     <div class="content">
         <div id="control-panel">
             <button id="color">
-                <p>Color</p>
+                <div id="colorModal" class="modal">
+                    <div class="modal-content">
+                        <span id="closeButton" class="close">&times;</span>
+                        <div id="colorPicker"></div>
+                        <button id="setColorButton">Set Color</button>
+                    </div>
+                </div>
             </button>
             <button id="mode">
                 <p>Mode</p>
