--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    
 </head>
 <body>
+    
     <div class="header">
         <h1>Etch-a-Sketch</h1>
     </div>
@@ -15,13 +16,7 @@
     <div class="content">
         <div id="control-panel">
             <button id="color">
-                <div id="colorModal" class="modal">
-                    <div class="modal-content">
-                        <span id="closeButton" class="close">&times;</span>
-                        <div id="colorPicker"></div>
-                        <button id="setColorButton">Set Color</button>
-                    </div>
-                </div>
+                <p>Color</p>
             </button>
             <button id="mode">
                 <p>Mode</p>
@@ -36,6 +31,7 @@
         <div id="board">
 
         </div>
+        <script src="scripts.js"></script>
     </div>
 
     <div class="footer">
