--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
     
 </head>
 <body>
@@ -31,7 +31,7 @@
         <div id="board">
 
         </div>
-        <script src="scripts.js"></script>
+        <script src="src/scripts.js"></script>
     </div>
 
     <div class="footer">
