button spacing and styling added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Pen Colour</p>
             </div>
 
-            <div class="color-panel">
+            <div class="color-panel two">
                 <input type="color" id="bg-color-select", value="#D7BC99">
                 <p>Background Colour</p>
             </div>
